# dingent-hub

./: .gitignore  LICENSE  PLUGIN_PROVENANCE.md  README.md  market.json
plugins/ClinicalTrials/: plugin.toml
plugins/ENA/: plugin.toml
plugins/Omnipath/: plugin.toml
plugins/STRING/: plugin.toml
plugins/bio-data-loader/: .gitignore  main.py  plugin.toml  pyproject.toml
plugins/cellmarker/: celltype.py  celltypeschema.py  plugin.toml  pyproject.toml  singleCellBase_20230904_ALL.txt  util.py
plugins/chEMBL/: README.md  chembl_search.py  chembl_server.py  plugin.toml  pyproject.toml  requirements.txt
plugins/ding-rag/: flake.nix  main.py  plugin.toml  pyproject.toml
plugins/ding-text2sql/: main.py  plugin.toml  pyproject.toml
plugins/hacker-news/: .gitignore  Dockerfile  README.md  plugin.toml  pyproject.toml  smithery.yaml
plugins/hacker-news/src/mcp_hn/: hn.py  server.py
plugins/mcp-github-trending/: plugin.toml
plugins/mcp-github-trending/src/mcp_server_github_trending/: server.py
plugins/pubchem/: README.md  plugin.toml  pubchem_search.py  pubchem_server.py  pyproject.toml  requirements.txt
plugins/single-cell-analyzer/: main.py  plugin.toml  pyproject.toml
plugins/text2sql/: plugin.toml  pyproject.toml
plugins/text2sql/src/text2sql/: database.py  graph.py  main.py  settings.py  types_.py
plugins/text2sql/src/text2sql/handlers/: __init__.py  base.py  handler_builder.py  result_handler.py
plugins/uniprot/: .flake8  .gitattributes  .gitignore  LICENSE  README.md  plugin.toml  pyproject.toml  server.py
