[project]
name = "ding-rag-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "fastmcp==3.0.0b1",
    "openai",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
