[project]
name = "uniprot"
version = "0.1.0"
description = "MCP server for UniProt protein data access"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "bandit",
    "safety",
]